--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <button class="btnPrincipal">Mostrar button</button>
-      <wc-alert id="app" titulo="Cuidado con lo que hace">
+      <wc-alert id="app" titulo="Precaución">
         <p>Esto es el mensaje que quiero mostrar</p>
       </wc-alert>
     </main>
